ICS - Footer changes

--- a/services/service-assurance/service-now.html
+++ b/services/service-assurance/service-now.html
@@ -375,7 +375,7 @@
                 <div class="footer-address-group">
                     <div class="footer-address">
                         <span class="fi fi-ca"></span>
-                        <span class="footer-office"><b>Informations Consultants Services Inc.</b></span><br>
+                        <span class="footer-office"><b>Inspiration Consultant Service Inc.</b></span><br>
                         <span>5236, Philias Gagnon,
                             Montreal, Quebec,<br> Canada
                             H1R 3Z6</span><br>
