ICS - Page Navigation Error Fix

--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
                                     <li><a href="#">Application Software Development </a></li>
 
                                     <li><a
-                                            href="/services/application-software-development/custom-application-development.html">Custom
+                                            href="services\application-software-development\custom-application-development.html">Custom
                                             Application Development</a></li>
                                     <li><a
-                                            href="/services/application-software-development/web-mobile-development.html">Web
+                                            href="services\application-software-development\web-mobile-development.html">Web
                                             & Mobile Development</a></li>
                                     <li><a
-                                            href="/services/application-software-development/enterprise-software-solutions.html">Enterprise
+                                            href="services\application-software-development\enterprise-software-solutions.html">Enterprise
                                             Software Solutions</a></li>
                                     <li><a
-                                            href="/services/application-software-development/cloud-native-development.html">Cloud-Native
+                                            href="services\application-software-development\cloud-native-development.html">Cloud-Native
                                             Development</a></li>
                                     <li><a
-                                            href="/services/application-software-development/api-development-integration.html">API
+                                            href="services\application-software-development\api-development-integration.html">API
                                             Development & Integration</a></li>
                                     <li><a
-                                            href="/services/application-software-development/legacy-system-modernization.html">Legacy
+                                            href="services\application-software-development\legacy-system-modernization.html">Legacy
                                             System Modernization</a></li>
 
                                 </ul>
@@ -484,9 +484,9 @@
                         <span>5236, Philias Gagnon,
                             Montreal, Quebec,<br> Canada
                             H1R 3Z6</span><br>
-                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:sales@icstech.ca">sales@icstech.ca</a>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
+                                href="mailto:sales@icstech.ca">sales@icstech.ca</a>
                         </div>
-
                     </div>
 
                     <div class="footer-address">
