Image and other page URL's change

--- a/index.html
+++ b/index.html
@@ -87,20 +87,19 @@
                                     <li><a
                                             href="services\application-software-development\custom-application-development.html">Custom
                                             Application Development</a></li>
-                                    <li><a
-                                            href="/services/application-software-development/web-mobile-development.html">Web
+                                    <li><a href="services\application-software-development\web-mobile-development.html">Web
                                             & Mobile Development</a></li>
                                     <li><a
-                                            href="/services/application-software-development/enterprise-software-solutions.html">Enterprise
+                                            href="services\application-software-development\enterprise-software-solutions.html">Enterprise
                                             Software Solutions</a></li>
                                     <li><a
-                                            href="/services/application-software-development/cloud-native-development.html">Cloud-Native
+                                            href="services\application-software-development\cloud-native-development.html">Cloud-Native
                                             Development</a></li>
                                     <li><a
-                                            href="/services/application-software-development/api-development-integration.html">API
+                                            href="services\application-software-development\api-development-integration.html">API
                                             Development & Integration</a></li>
                                     <li><a
-                                            href="/services/application-software-development/legacy-system-modernization.html">Legacy
+                                            href="services\application-software-development\legacy-system-modernization.html">Legacy
                                             System Modernization</a></li>
 
                                 </ul>
@@ -109,56 +108,54 @@
                                 <ul class="mega-links">
                                     <li><a href="#">IT Consulting </a></li>
 
-                                    <li><a href="/services/it-consulting/full-stack-development.html">Full Stack
+                                    <li><a href="services\it-consulting\full-stack-development.html">Full Stack
                                             Development </a></li>
-                                    <li><a href="/services/it-consulting/technology-strategy_roadmapping.html">Technology
+                                    <li><a href="services\it-consulting\technology-strategy_roadmapping.html">Technology
                                             Strategy & Roadmapping </a></li>
-                                    <li><a href="/services/it-consulting/digital-transformation-consulting.html">Digital
+                                    <li><a href="services\it-consulting\digital-transformation-consulting.html">Digital
                                             Transformation Consulting</a></li>
-                                    <li><a href="/services/it-consulting/infrastructure-assessment-optimization.html">Infrastructure
+                                    <li><a href="services\it-consulting\infrastructure-assessment-optimization.html">Infrastructure
                                             Assessment & Optimization</a></li>
-                                    <li><a href="/services/it-consulting/risk-management-compliance.html">Risk
+                                    <li><a href="services\it-consulting\risk-management-compliance.html">Risk
                                             Management & Compliance</a></li>
 
 
                                 </ul>
                             </div>
                             <div class="row image-row">
-                                <img src="/images/2image_about_us_home_freepik.jpg" alt="Descriptive Alt Text" />
+                                <img src="images\2image_about_us_home_freepik.jpg" alt="Descriptive Alt Text" />
                             </div>
                             <div class="row">
                                 <ul class="mega-links">
                                     <li>
-                                        <a href="/services/it-professional-services.html">IT Professional Services </a>
+                                        <a href="services\it-professional-services.html">IT Professional Services </a>
 
                                     </li>
                                     <li><a
-                                            href="/services/it-professional-services/it-staffing-resource-augmentation.html">IT
+                                            href="services\it-professional-services\it-staffing-resource-augmentation.html">IT
                                             Staffing & Resource Augmentation</a></li>
-                                    <li><a href="/services/it-professional-services/project-management-delivery.html">
+                                    <li><a href="services\it-professional-services\project-management-delivery.html">
                                             Project Management & Delivery</a></li>
-                                    <li><a href="/services/it-professional-services/system-integration-services.html">System
+                                    <li><a href="services\it-professional-services\system-integration-services.html">System
                                             Integration Services</a></li>
-                                    <li><a href="/services/it-professional-services/cloud-infrastructure-services.html">
+                                    <li><a href="services\it-professional-services\cloud-infrastructure-services.html">
                                             Cloud & Infrastructure Services</a></li>
-                                    <li><a href="/services/it-professional-services/technical-support-maintenance.html">
+                                    <li><a href="services\it-professional-services\technical-support-maintenance.html">
                                             Technical Support & Maintenance</a></li>
-
                                 </ul>
                             </div>
                             <div class="row">
                                 <ul class="mega-links">
 
-                                    <li><a href="/services/service-assurance.html">Service Assurance </a></li>
-
-                                    <li><a href="/services/service-assurance/oracle-unified-assurance.html">Oracle
+                                    <li><a href="services\service-assurance.html">Service Assurance </a></li>
+                                    <li><a href="services\service-assurance\oracle-unified-assurance.html">Oracle
                                             Unified Assurance</a></li>
-                                    <li><a href="/services/service-assurance/service-now.html">ServiceNow </a></li>
-                                    <li><a href="/services/service-assurance/bmc-remedy.html">BMC Remedy</a></li>
+                                    <li><a href="services\service-assurance\service-now.html">ServiceNow </a></li>
+                                    <li><a href="services\service-assurance\bmc-remedy.html">BMC Remedy</a></li>
                                 </ul>
                             </div>
                             <div class="row image-row">
-                                <img src="/images/consulting_2.png" alt="Descriptive Alt Text" />
+                                <img src="images\consulting_2.png" alt="Descriptive Alt Text" />
                             </div>
                         </div>
                     </div>
@@ -484,7 +481,8 @@
                         <span>5236, Philias Gagnon,
                             Montreal, Quebec,<br> Canada
                             H1R 3Z6</span><br>
-                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:sales@icstech.ca">sales@icstech.ca</a>
+                        <div><span class="footer-icon"><i class="fa-solid fa-envelope"></i></span> <a
+                                href="mailto:sales@icstech.ca">sales@icstech.ca</a>
                         </div>
 
                     </div>
