ICS - styling functionality error fix

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <link rel="shortcut icon" href="images/fav.ico" type="image/x-icon">
-    <link rel="icon" href="images/fav.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images\fav.ico" type="image/x-icon">
+    <link rel="icon" href="images\fav.ico" type="image/x-icon">
 
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.css">
+    <link rel="stylesheet" href="css\owl.carousel.min.css">
+    <link rel="stylesheet" href="css\owl.theme.default.css">
     <!-- Angular translate --->
     <script src="angular/angular1.6.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.0/angular-cookies.min.js"></script>
@@ -25,16 +25,16 @@
         src="https://cdn.rawgit.com/angular-translate/bower-angular-translate-storage-cookie/2.18.1/angular-translate-storage-cookie.js"></script>
     <script
         src="https://cdn.rawgit.com/angular-translate/bower-angular-translate-storage-local/2.18.1/angular-translate-storage-local.js"></script>
-    <script src="angular/translation.js"></script>
-    <script src="angular/script.js"></script>
+    <script src="angular\translation.js"></script>
+    <script src="angular\script.js"></script>
 
 
     <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap\css\bootstrap.min.css" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css\style.css">
     <!-- Responsive -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css\responsive.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -71,7 +71,7 @@
 
         <div class="wrapper">
             <div class="logo">
-                <a href="index.html" class="href"><img src="/images/logo_croped.png" alt=""></a>
+                <a href="index.html" class="href"><img src="\images\logo_croped.png" alt=""></a>
             </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
@@ -181,64 +181,10 @@
     </nav>
 
 
-    <!-- HEADER END -->
-    <!-- Slider Starts-->
-
-    <!-- <div class="own_carousel wow slideInDown">
-        <div class="item"
-            style="background-image: url(/images/service_assurance_1.jpg);background-repeat: no-repeat;background-size: cover;">
-            <div class="carousel-caption ">
-                <h2>{{'Service ' | translate}} <span class="orange-cl">{{'Assurance'}}</span> </h2>
-                <p> {{'ICS expertise in providing services in Oracle Unified Assurance, ServiceNow, BMC Remedy' |
-                    translate}}</p>
-            </div>
-        </div>
-        <div class="item"
-            style="background-image: url(/images/apo_development2.png); background-repeat: no-repeat;background-size: cover;">
-            <div class="carousel-caption  ">
-                <h2>{{'Application ' | translate}} <span class="orange-cl">{{'Development Maintenance'}}</span>
-                </h2>
-                <p>{{'ICS provides customers with cost-effective ADM services to reduce costs and achieve quality
-                    results in a timely manner.' | translate}}</p>
-            </div>
-        </div>
-        <div class="item"
-            style="background-image: url(/images/consulting_2.png); background-repeat: no-repeat;background-size: cover;">
-            <div class="carousel-caption  ">
-                <h2>{{'IT Consulting' | translate}} <span class="orange-cl">{{ ' & Professional'}}</span> </h2>
-                <p>{{'Our cost-effective professional & consulting services benefit customers to mitigate cost,
-                    improve
-                    productivity.' | translate}}</p>
-            </div>
-        </div>
-        <div class="item"
-            style="background: url(/images/mobile_apps.jpg); background-repeat: no-repeat;background-size: cover;">
-            <div class="carousel-caption  ">
-                <h2>{{'Mobile ' |translate}} <span class="orange-cl">{{'Apps'}}</span> </h2>
-                <p>{{'Leveraging our technology and domain expertise to deliver mobility solutions' | translate}}
-                </p>
-            </div>
-        </div>
-        <div class="item "
-            style="background-image: url(/images/web_app_development.jpg);background-repeat: no-repeat;background-size: cover;"">
-            <div>
-            </div>
-        <div class=" carousel-caption ">
-            <h2>{{'Web ' | translate}} <span class=" orange-cl">{{'Development'}}</span> </h2>
-            <p> {{'Need a website to communicate with your stakeholders? Remember ICS for high end website
-                development.' | translate}}</p>
-        </div>
-    </div>
-    <div class="controls">
-        <button class="left"></button>
-        <button class="right"></button>
-    </div>
-    </div> -->
-
     <div class="own_carousel">
         <div class="item active">
             <div class="bg"
-                style="background-image:url(images/service_assurance_1.jpg);background-repeat: no-repeat;background-size: cover;">
+                style="background-image:url(images\service_assurance_1.jpg);background-repeat: no-repeat;background-size: cover;">
             </div>
             <div class="carousel-caption ">
                 <h2>{{'Service ' | translate}} <span class="orange-cl">{{'Assurance'}}</span> </h2>
@@ -248,7 +194,7 @@
         </div>
         <div class="item ">
             <div class="bg"
-                style="background-image:url(images/apo_development2.png);background-repeat: no-repeat;background-size: cover;">
+                style="background-image:url(images\apo_development2.png);background-repeat: no-repeat;background-size: cover;">
             </div>
             <div class="carousel-caption">
                 <h2>{{'Application Development Maintenance' | translate}}</h2>
@@ -258,7 +204,7 @@
         </div>
         <div class="item">
             <div class="bg"
-                style="background-image:url(images/consulting_2.png);background-repeat: no-repeat;background-size: cover;">
+                style="background-image:url(images\consulting_2.png);background-repeat: no-repeat;background-size: cover;">
             </div>
             <div class="carousel-caption">
                 <h2>{{'IT Consulting & Professional' | translate}}</h2>
@@ -269,7 +215,7 @@
         </div>
         <div class="item">
             <div class="bg"
-                style="background-image:url(images/mobile_apps.jpg);background-repeat: no-repeat;background-size: cover;">
+                style="background-image:url(images\mobile_apps.jpg);background-repeat: no-repeat;background-size: cover;">
             </div>
             <div class="carousel-caption">
                 <h2>{{'Mobile Apps' |translate}}</h2>
@@ -278,7 +224,7 @@
         </div>
         <div class="item">
             <div class="bg"
-                style="background-image:url(images/web_app_development.jpg);background-repeat: no-repeat;background-size: cover;">
+                style="background-image:url(images\web_app_development.jpg);background-repeat: no-repeat;background-size: cover;">
             </div>
             <div class="carousel-caption">
                 <h2>{{'Web Development' | translate}}</h2>
@@ -364,29 +310,29 @@
         </div>
     </div>
 
-    <!-- <div class="stats-section">
-        <div class="stats-header">
-            <h2>Our AI &amp; Data Achievements</h2>
-            <p>Delivering excellence in AI, ML, and Data Analytics</p>
+
+    <div class="stats-header">
+        <h2>Our AI &amp; Data Achievements</h2>
+        <p>Delivering excellence in AI, ML, and Data Analytics</p>
+    </div>
+    <div class="stats-row">
+        <div class="stats-col">
+            <div class="stats-number">120+</div>
+            <div class="stats-label">AI &amp; Data Specialists</div>
         </div>
-        <div class="stats-row">
-            <div class="stats-col">
-                <div class="stats-number">120+</div>
-                <div class="stats-label">AI &amp; Data Specialists</div>
-            </div>
-            <div class="stats-col">
-                <div class="stats-number">175+</div>
-                <div class="stats-label">AI/ML Models</div>
-            </div>
-            <div class="stats-col">
-                <div class="stats-number">345+</div>
-                <div class="stats-label">Data Analytics Dashboards</div>
-            </div>
-            <div class="stats-col">
-                <div class="stats-number">1630+</div>
-                <div class="stats-label">Projects Delivered</div>
-            </div>
+        <div class="stats-col">
+            <div class="stats-number">175+</div>
+            <div class="stats-label">AI/ML Models</div>
         </div>
+        <div class="stats-col">
+            <div class="stats-number">345+</div>
+            <div class="stats-label">Data Analytics Dashboards</div>
+        </div>
+        <div class="stats-col">
+            <div class="stats-number">1630+</div>
+            <div class="stats-label">Projects Delivered</div>
+        </div>
+    </div>
     </div> -->
 
     <!-- Connect Section (below stats section) -->
@@ -547,12 +493,12 @@
     </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery.js"></script>
+    <script src="js\jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <script src="js/wow.js"></script>
-    <script src="js/countup.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="bootstrap\js\bootstrap.min.js"></script>
+    <script src="js\wow.js"></script>
+    <script src="js\countup.js"></script>
+    <script src="js\custom.js"></script>
     <script>	$(document).ready(function () {
             console.log('index');
             console.log(localStorage.getItem('NG_TRANSLATE_LANG_KEY'));
@@ -566,130 +512,62 @@
             $('#mailform').submit(function (event) { $('#response').html("<b style='color: white; '>{{'Loading response...' | translate}}</b>"); $.ajax({ type: 'POST', url: 'mail.php', data: $(this).serialize() }).done(function (data) { $('#response').html(data); $("#mailform")[0].reset(); }).fail(function () { console.log("{{'Posting failed.' | translate}}"); }); return false; });
         });</script>
 
-    <!-- <script>
-        new WOW().init();
-        $(function () {
-            var i = 1;
-            var cunt = $('.own_carousel > .item').length;
-            sliding(i); var options = { useEasing: true, useGrouping: true, separator: '', decimal: '.', suffix: '+' }; var member = new CountUp('member', 0, 20, 0, 4, options); var projects = new CountUp('projects', 0, 25, 0, 4, options); var customers = new CountUp('customers', 0, 5, 0, 4, options); var experience = new CountUp('experience', 0, 10, 0, 4, options); var aniCount = 0; $(window).scroll(function () { countAnimation(); }); function countAnimation() { if ($('#member').hasClass('animated') && (aniCount == 0)) { aniCount++; setTimeout(() => { member.start(); }, 200); setTimeout(() => { projects.start(); }, 500); setTimeout(() => { customers.start(); }, 750); setTimeout(() => { experience.start(); }, 1000); } } setTimeout(() => { countAnimation(); }, 1000);
-            var timer = setInterval(function () {
-                i++;
-                if (i > cunt) {
-                    i = 1;
-                }
-                sliding(i);
-            }, 5000);
-            $('.own_carousel .controls .left').click(function () {
-                window.clearInterval(timer);
-                i--;
-                if (i == 0) {
-                    i = 4;
-                }
-                console.log(i);
-                sliding(i);
-                timer = setInterval(function () {
-                    i++;
-                    if (i > cunt) {
-                        i = 1;
-                    }
-                    sliding(i);
-                }, 5000);
-            })
-            $('.own_carousel .controls .right').click(function () {
-                window.clearInterval(timer);
-                i++;
-                if (i > cunt) {
-                    i = 1;
-                }
-                sliding(i);
-                timer = setInterval(function () {
-                    i++;
-                    if (i > cunt) {
-                        i = 1;
-                    }
-                    sliding(i);
-                }, 5000);
-            })
-            function sliding(index) {
-                var $items = $('.own_carousel > .item');
-                $items.removeClass('active');
-                $items.eq(index - 1).addClass('active');
-                $items.eq(index - 1).animate({ 'opacity': '1' }, 500);
-                $items.not(':eq(' + (index - 1) + ')').animate({ 'opacity': '0' }, 0);
-
-                // $items.eq(index - 1).find('.bgs').each(function () {
-                //     const $el = $(this);
-                //     $el.removeClass('animated fadeInLeft');
-                //     void this.offsetWidth;
-                //     $el.addClass('animated fadeInLeft');
-                // });
-                // // Re-animate text elements
-                // $items.eq(index - 1).find('.carousel-caption').each(function () {
-                //     const $el = $(this);
-                //     $el.removeClass('animated fadeInRight');
-                //     void this.offsetWidth;
-                //     $el.addClass('animated fadeInRight');
-                // });
-            }
-        }
-        )
-    </script> -->
 
 
-    <!-- <script>
-        new WOW().init();
 
-        $(function () {
-            let i = 1;
-            const $items = $('.own_carousel > .item');
-            const total = $items.length;
+    new WOW().init();
 
-            function sliding(index) {
-                $items.removeClass('active slideInLeft slideInRight');
-                const $current = $items.eq(index - 1);
-                $current.addClass('active slideInRight');
+    $(function () {
+    let i = 1;
+    const $items = $('.own_carousel > .item');
+    const total = $items.length;
 
-                // Optional: Animate text separately if needed
-                $current.find('.carousel-caption').each(function () {
-                    const $caption = $(this);
-                    $caption.removeClass('animated slideInLeft');
-                    void this.offsetWidth; // force reflow
-                    $caption.addClass('animated slideInLeft');
-                });
-            }
+    function sliding(index) {
+    $items.removeClass('active slideInLeft slideInRight');
+    const $current = $items.eq(index - 1);
+    $current.addClass('active slideInRight');
 
-            // Initial slide
-            sliding(i);
+    // Optional: Animate text separately if needed
+    $current.find('.carousel-caption').each(function () {
+    const $caption = $(this);
+    $caption.removeClass('animated slideInLeft');
+    void this.offsetWidth; // force reflow
+    $caption.addClass('animated slideInLeft');
+    });
+    }
 
-            // Auto slide every 5 seconds
-            let timer = setInterval(() => {
-                i = (i % total) + 1;
-                sliding(i);
-            }, 5000);
+    // Initial slide
+    sliding(i);
 
-            // Navigation: left
-            $('.own_carousel .controls .left').click(function () {
-                clearInterval(timer);
-                i = (i - 2 + total) % total + 1;
-                sliding(i);
-                timer = resetTimer();
-            });
+    // Auto slide every 5 seconds
+    let timer = setInterval(() => {
+    i = (i % total) + 1;
+    sliding(i);
+    }, 5000);
 
-            // Navigation: right
-            $('.own_carousel .controls .right').click(function () {
-                clearInterval(timer);
-                i = (i % total) + 1;
-                sliding(i);
-                timer = resetTimer();
-            });
+    // Navigation: left
+    $('.own_carousel .controls .left').click(function () {
+    clearInterval(timer);
+    i = (i - 2 + total) % total + 1;
+    sliding(i);
+    timer = resetTimer();
+    });
 
-            function resetTimer() {
-                return setInterval(() => {
-                    i = (i % total) + 1;
-                    sliding(i);
-                }, 5000);
-            }
-        });
+    // Navigation: right
+    $('.own_carousel .controls .right').click(function () {
+    clearInterval(timer);
+    i = (i % total) + 1;
+    sliding(i);
+    timer = resetTimer();
+    });
+
+    function resetTimer() {
+    return setInterval(() => {
+    i = (i % total) + 1;
+    sliding(i);
+    }, 5000);
+    }
+    });
     </script> -->
     <script>
         new WOW().init();
