stylesheet url change

--- a/services/application-software-development/custom-application-development.html
+++ b/services/application-software-development/custom-application-development.html
@@ -10,9 +10,9 @@
     <!-- Bootstrap -->
     <link href="bootstrap\css\bootstrap.min.css" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="..\..\css\style.css">
     <!-- Responsive -->
-    <link rel="stylesheet" href="\css\responsive.css">
+    <link rel="stylesheet" href="..\..\css\responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@6.7.0/css/flag-icons.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
